syntax = "proto3";

package proto;

message LoginReq
{
    uint64 uid = 1;
    string passwd = 2;
}

message LoginRsp
{
    int32 err_code = 1;
    string err_msg = 2;
}

message CreateTableReq
{
    uint64 uid = 1;
}

message CreateTableRsp
{
    int32 err_code = 1;
    string err_msg = 2;
    uint32 table_id = 3;
}

message JoinTableReq
{
    uint64 uid = 1;
    uint32 table_id = 2;
}

message JoinTableRsp
{
    int32 err_code = 1;
    string err_msg = 2;
}